# docs/swagger.json
@@ -703,6 +703,9 @@
                     "description": "at least one of Id and KafkaTopic must be set",
                     "type": "string"
                 },
+                "init_only_by_cqrs": {
+                    "type": "boolean"
+                },
                 "initial_group_rights": {
                     "type": "array",
                     "items": {
@@ -714,11 +717,13 @@
                     "type": "string"
                 },
                 "kafka_topic": {
-                    "description": "changeable, defaults to Id",
                     "type": "string"
                 },
                 "last_update_unix_timestamp": {
                     "type": "integer"
+                },
+                "no_cqrs": {
+                    "type": "boolean"
                 }
             }
         }
